# klotski-solver

./: BoardHasher.h  CMakeLists.txt  MoveDiscovery.cpp  MoveDiscovery.h  MoveValidation.cpp  MoveValidation.h  README.md  block.cpp  block.h  in_hardPuzzle.txt  in_largePuzzle.txt  in_smallPuzzle.txt  main.cpp  out_hardPuzzle.html  out_hardPuzzle.txt  out_smallPuzzle.html  printer.cpp  printer.h  puzzle.cpp  puzzle.h  solver.cpp  solver.h  test.cpp
